--- a/packages/docs/docs/getting-started/flow.mdx
+++ b/packages/docs/docs/getting-started/flow.mdx
@@ -62,7 +62,9 @@ For instance, we could extract the flickering code from the above example to a
 separate generator and delegate our scene function to it:
 
 ```tsx
-import {ThreadGenerator} from '@motion-canvas/core';
+import {ThreadGenerator, createRef} from '@motion-canvas/core';
+import { makeScene2D } from '@motion-canvas/2d';
+import { Circle } from '@motion-canvas/2d';
 
 export default makeScene2D(function* (view) {
   const circle = createRef<Circle>();
